web/app/themes/vestedworld/assets/styles/pages/_about.scss
// About Page

// Management grid
.people.management {

  @include media-md {
    &::before {
      left: 0;
      height: 1px;
      width: 25px;
      content: '';
      bottom: #{$vertical-beat * 8};
      position: absolute;
      background: $gray-dark;
    }
  }

  .grid-items {
    border-top: 1px solid $gray-dark;
  }

  .person {
    width: 100%;
    height: auto;
    outline: none;
    max-width: none;
    padding-left: 0;
    flex-basis: 100%;
    padding-bottom: 0;
    border-top: 1px solid $gray-dark;
    @include media-md {
      display: flex;
      max-width: 50%;
      flex-basis: 50%;
      align-items: flex-end;
      padding-right: $column-width;
    }
    &:nth-of-type(odd) {
      @include media-md {
        padding-left: 30px;
      }
    }
    &:first-of-type {
      border-top: none;

      .grid-item-inner {
        @include min-screen(860px) {
          @include column(12);
        }
      }

      @include media-md {
        padding-left: 0;
        max-width: none;
        flex-basis: 100%;
        direction: block;
      }
    }

    .-left {
      width: 100%;
      @include media-md {
        display: flex;
      }
    }
    .grid-item-data {
      h1 {
        margin-top: 0;
        color: $brand-primary;
      }
    }
    .grid-item-inner {
      display: flex;
      flex-direction: column;
      @include min-screen(860px) {
        width: 100%;
        flex-direction: row;
      }
    }
    .grid-item-text {
      order: 1;
      min-width: 150px;
      position: relative;
      padding: 30px 0 80px;
      @include min-screen(860px) {
        order: 0;
      }
    }
    .callout {
      display: none;
    }
    .quote {
      @extend .h2;
      padding: 30px 0;
      color: $brand-primary;
      @include media-md {
        padding-left: 30px;
        @include column(11);
      }
    }
    .grid-item-activate {
      left: 0;
      bottom: 30px;
      position: absolute;
    }
    .grid-item-image {
      order: 0;
      top: auto;
      left: auto;
      right: auto;
      width: 100%;
      bottom: auto;
      text-align: left;
      padding-top: 30px;
      position: relative;
      align-self: flex-end;
      img {
        left: auto;
        min-width: 1px;
        max-width: 100%;
        min-height: 1px;
        transform: none;
        vertical-align: top;
      }
      &::before {
        display: none;
      }
      @include min-screen(860px) {
        order: 1;
        width: auto;
        padding-top: 0;
        text-align: right;
        img {
          max-height: none;
        }
      }
    }
  }
  .people-grid {
    border-top: 1px solid $gray-dark;
    border-bottom: 1px solid $gray-dark;
  }
}

// Top-boarder for grids that ain't the management team
.people:not(.management) {
  .grid-items {
    padding-top: 30px;
    border-top: 1px solid $gray-dark;
  }
}

// Active person mods
.active-grid-item-container.active-person {

  .quote {
    overflow: hidden;
    padding: #{$vertical-beat * 8} #{$column-width * 2} 0;
  }
  .person-inner {
    padding: 0;
    overflow: hidden;
  }
  .callout {
    @extend .h1;
    color: $white;
    font-size: 24px;
    line-height: 1.333333333em;
    background: $brand-primary;
    padding: #{$vertical-beat * 8} $mobile-global-padding;
    @include media-md {
      font-size: 48px;
      line-height: 48px;
      padding: #{$vertical-beat * 8} $global-padding;
    }
  }
  .quote {
    display: none;
  }
  .person-text header {
    overflow: hidden;
  }

  // And for management
  .grid-item-data.management {
    .grid-item-inner {
      background: $white;
      padding: #{$vertical-beat * 8} #{$column-width * 2} 0;
    }
    .-left {
      background: $brand-primary;
    }
    .grid-item-text {
      padding: 0;
    }
    .grid-item-image {
      height: auto;
      background: none;
      padding-bottom: 0;
      .grid-item-image-inner {
        position: static;
        &::before {
          display: none;
        }
      }
      img {
        top: auto;
        left: auto;
        right: auto;
        bottom: auto;
        transform: none;
        position: relative;
        vertical-align: top;
      }
    }
  }
}

// No-touch mod for fixed background
.no-touch {
 .page.about-us .page-section .image-wrap {
    background-attachment: fixed;
 }
}

